// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`makeLiquidationTxOptions dex liquidation 1`] = `
{
  "contractAddress": "SPT4BE98XGF7NSWV1V0ZK1YMS0KQ0A6X2X8EJ5EM",
  "contractName": "liquidator",
  "fee": 50000,
  "functionArgs": [
    {
      "type": "some",
      "value": {
        "type": "buffer",
        "value": "0504e41550100000003b",
      },
    },
    {
      "type": "list",
      "value": [
        {
          "type": "some",
          "value": {
            "type": "tuple",
            "value": {
              "liquidator-repay-amount": {
                "type": "uint",
                "value": 2112500000n,
              },
              "min-collateral-expected": {
                "type": "uint",
                "value": 1n,
              },
              "user": {
                "type": "address",
                "value": "ST3XD84X3PE79SHJAZCDW1V5E9EA8JSKRBNNJCANK",
              },
            },
          },
        },
        {
          "type": "some",
          "value": {
            "type": "tuple",
            "value": {
              "liquidator-repay-amount": {
                "type": "uint",
                "value": 462300000n,
              },
              "min-collateral-expected": {
                "type": "uint",
                "value": 1n,
              },
              "user": {
                "type": "address",
                "value": "ST2DXHX9Q844EBT80DYJXFWXJKCJ5FFAX53H4AZFA",
              },
            },
          },
        },
        {
          "type": "some",
          "value": {
            "type": "tuple",
            "value": {
              "liquidator-repay-amount": {
                "type": "uint",
                "value": 1793100000n,
              },
              "min-collateral-expected": {
                "type": "uint",
                "value": 1n,
              },
              "user": {
                "type": "address",
                "value": "ST2VWSP59FEVDXXYGGWYG90M3N67ZST2AGPA3P2HC",
              },
            },
          },
        },
      ],
    },
    {
      "type": "uint",
      "value": 1738263157n,
    },
    {
      "type": "uint",
      "value": 2n,
    },
  ],
  "functionName": "liquidate-with-swap",
  "network": "mainnet",
  "nonce": 2,
  "postConditionMode": 1,
  "senderKey": "priv",
  "validateWithAbi": true,
}
`;

exports[`makeLiquidationTxOptions flash loan + dex liquidation 1`] = `
{
  "contractAddress": "SPT4BE98XGF7NSWV1V0ZK1YMS0KQ0A6X2X8EJ5EM",
  "contractName": "flash-loan-v1",
  "fee": 50000,
  "functionArgs": [
    {
      "type": "uint",
      "value": 4365262008n,
    },
    {
      "type": "contract",
      "value": "SPT4BE98XGF7NSWV1V0ZK1YMS0KQ0A6X2X8EJ5EM.liquidator",
    },
    {
      "type": "some",
      "value": {
        "type": "buffer",
        "value": "0c000000060562617463680b000000030a0c00000003176c697175696461746f722d72657061792d616d6f756e74010000000000000000000000007dea3120176d696e2d636f6c6c61746572616c2d657870656374656401000000000000000000000000000000010475736572051afad413a3b38e9cc64afb1bc0ecae4b948966785d0a0c00000003176c697175696461746f722d72657061792d616d6f756e74010000000000000000000000001b8e2360176d696e2d636f6c6c61746572616c2d657870656374656401000000000000000000000000000000010475736572051a9bd8f5374108e5e9006fa5d7f3b29b2457bd5d280a0c00000003176c697175696461746f722d72657061792d616d6f756e74010000000000000000000000006ae088e0176d696e2d636f6c6c61746572616c2d657870656374656401000000000000000000000000000000010475736572051ab7ccd8a97bb6def7d0873d048283a98ffce84a8508646561646c696e6501000000000000000000000000679bca750364657801000000000000000000000000000000021870726963652d736c6970706167652d746f6c6572616e6365010000000000000000000000000000000014707974682d70726963652d666565642d646174610a020000000a0504e41550100000003b10726573657276652d636f6e747261637405160000000000000000000000000000000000000000",
      },
    },
  ],
  "functionName": "flash-loan",
  "network": "mainnet",
  "nonce": 2,
  "postConditionMode": 1,
  "senderKey": "priv",
  "validateWithAbi": true,
}
`;

exports[`makeLiquidationTxOptions flash loan + dex liquidation 2`] = `
{
  "type": "tuple",
  "value": {
    "batch": {
      "type": "list",
      "value": [
        {
          "type": "some",
          "value": {
            "type": "tuple",
            "value": {
              "liquidator-repay-amount": {
                "type": "uint",
                "value": 2112500000n,
              },
              "min-collateral-expected": {
                "type": "uint",
                "value": 1n,
              },
              "user": {
                "type": "address",
                "value": "ST3XD84X3PE79SHJAZCDW1V5E9EA8JSKRBNNJCANK",
              },
            },
          },
        },
        {
          "type": "some",
          "value": {
            "type": "tuple",
            "value": {
              "liquidator-repay-amount": {
                "type": "uint",
                "value": 462300000n,
              },
              "min-collateral-expected": {
                "type": "uint",
                "value": 1n,
              },
              "user": {
                "type": "address",
                "value": "ST2DXHX9Q844EBT80DYJXFWXJKCJ5FFAX53H4AZFA",
              },
            },
          },
        },
        {
          "type": "some",
          "value": {
            "type": "tuple",
            "value": {
              "liquidator-repay-amount": {
                "type": "uint",
                "value": 1793100000n,
              },
              "min-collateral-expected": {
                "type": "uint",
                "value": 1n,
              },
              "user": {
                "type": "address",
                "value": "ST2VWSP59FEVDXXYGGWYG90M3N67ZST2AGPA3P2HC",
              },
            },
          },
        },
      ],
    },
    "deadline": {
      "type": "uint",
      "value": 1738263157n,
    },
    "dex": {
      "type": "uint",
      "value": 2n,
    },
    "price-slippage-tolerance": {
      "type": "uint",
      "value": 0n,
    },
    "pyth-price-feed-data": {
      "type": "some",
      "value": {
        "type": "buffer",
        "value": "0504e41550100000003b",
      },
    },
    "reserve-contract": {
      "type": "address",
      "value": "SP000000000000000000002Q6VF78",
    },
  },
}
`;

exports[`makeLiquidationTxOptions flash loan + dex liquidation while sufficient capital is on the contract 1`] = `
{
  "contractAddress": "SPT4BE98XGF7NSWV1V0ZK1YMS0KQ0A6X2X8EJ5EM",
  "contractName": "liquidator",
  "fee": 50000,
  "functionArgs": [
    {
      "type": "some",
      "value": {
        "type": "buffer",
        "value": "0504e41550100000003b",
      },
    },
    {
      "type": "list",
      "value": [
        {
          "type": "some",
          "value": {
            "type": "tuple",
            "value": {
              "liquidator-repay-amount": {
                "type": "uint",
                "value": 2112500n,
              },
              "min-collateral-expected": {
                "type": "uint",
                "value": 1n,
              },
              "user": {
                "type": "address",
                "value": "ST3XD84X3PE79SHJAZCDW1V5E9EA8JSKRBNNJCANK",
              },
            },
          },
        },
      ],
    },
    {
      "type": "uint",
      "value": 1738263157n,
    },
    {
      "type": "uint",
      "value": 2n,
    },
  ],
  "functionName": "liquidate-with-swap",
  "network": "mainnet",
  "nonce": 2,
  "postConditionMode": 1,
  "senderKey": "priv",
  "validateWithAbi": true,
}
`;

exports[`makeLiquidationTxOptions no swap 1`] = `
{
  "contractAddress": "SPT4BE98XGF7NSWV1V0ZK1YMS0KQ0A6X2X8EJ5EM",
  "contractName": "liquidator",
  "fee": 50000,
  "functionArgs": [
    {
      "type": "some",
      "value": {
        "type": "buffer",
        "value": "0504e41550100000003b",
      },
    },
    {
      "type": "list",
      "value": [
        {
          "type": "some",
          "value": {
            "type": "tuple",
            "value": {
              "liquidator-repay-amount": {
                "type": "uint",
                "value": 2112500000n,
              },
              "min-collateral-expected": {
                "type": "uint",
                "value": 1n,
              },
              "user": {
                "type": "address",
                "value": "ST3XD84X3PE79SHJAZCDW1V5E9EA8JSKRBNNJCANK",
              },
            },
          },
        },
        {
          "type": "some",
          "value": {
            "type": "tuple",
            "value": {
              "liquidator-repay-amount": {
                "type": "uint",
                "value": 462300000n,
              },
              "min-collateral-expected": {
                "type": "uint",
                "value": 1n,
              },
              "user": {
                "type": "address",
                "value": "ST2DXHX9Q844EBT80DYJXFWXJKCJ5FFAX53H4AZFA",
              },
            },
          },
        },
        {
          "type": "some",
          "value": {
            "type": "tuple",
            "value": {
              "liquidator-repay-amount": {
                "type": "uint",
                "value": 1793100000n,
              },
              "min-collateral-expected": {
                "type": "uint",
                "value": 1n,
              },
              "user": {
                "type": "address",
                "value": "ST2VWSP59FEVDXXYGGWYG90M3N67ZST2AGPA3P2HC",
              },
            },
          },
        },
      ],
    },
    {
      "type": "uint",
      "value": 1738263157n,
    },
  ],
  "functionName": "liquidate",
  "network": "mainnet",
  "nonce": 2,
  "postConditionMode": 1,
  "senderKey": "priv",
  "validateWithAbi": true,
}
`;
